# godot-cpp

./: CMakeLists.txt  binding_generator.py
.github/workflows/: ci.yml
cmake/: common_compiler_flags.cmake  godotcpp.cmake
doc/: cmake.md
gdextension/: gdextension_interface.h
include/godot_cpp/: godot.hpp
include/godot_cpp/classes/: bindings.hpp  editor_plugin_registration.hpp  ref.hpp  wrapped.hpp
include/godot_cpp/core/: binder_common.hpp  builtin_ptrcall.hpp  class_db.hpp  defs.hpp  engine_ptrcall.hpp  error_macros.hpp  math.hpp  memory.hpp  method_bind.hpp  method_ptrcall.hpp  mutex_lock.hpp  object.hpp  object_id.hpp  property_info.hpp  type_info.hpp
include/godot_cpp/templates/: cowdata.hpp  hash_map.hpp  hash_set.hpp  hashfuncs.hpp  list.hpp  local_vector.hpp  pair.hpp  rb_map.hpp  rb_set.hpp  rid_owner.hpp  safe_refcount.hpp  search_array.hpp  self_list.hpp  sort_array.hpp  spin_lock.hpp  thread_work_pool.hpp  vector.hpp  vmap.hpp  vset.hpp
include/godot_cpp/variant/: aabb.hpp  array_helpers.hpp  basis.hpp  callable_custom.hpp  callable_method_pointer.hpp  char_string.hpp  char_utils.hpp  color.hpp  color_names.inc.hpp  plane.hpp  projection.hpp  quaternion.hpp  rect2.hpp  rect2i.hpp  transform2d.hpp  transform3d.hpp  typed_array.hpp  variant.hpp  vector2.hpp  vector2i.hpp  vector3.hpp  vector3i.hpp  vector4.hpp  vector4i.hpp
src/: godot.cpp
test/: CMakeLists.txt
test/src/: example.cpp
tools/: godotcpp.py
